# LexMind

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  SUPPORTED_VERSIONS.md  mkdocs.yml  requirements-docs.txt  task02.md  task03.md  task04.md  task05.md  task06.md  task07.md  task09.md  task11.md  task14.md
backend/: .coverage  README.md  bandit.yaml  pyproject.toml
backend/lexmind/: __init__.py  constants.py  dependencies.py  exceptions.py  lifecycle.py  logging.py  main.py  settings.py  version.py
backend/lexmind/api/: README.md
backend/lexmind/application/: README.md
backend/lexmind/artifacts/: README.md  __init__.py  artifact.py  artifact_dependency.py  artifact_events.py  artifact_exceptions.py  artifact_lineage.py  artifact_manager.py  artifact_manifest.py  artifact_metadata.py  artifact_registry.py  artifact_state.py  artifact_types.py  artifact_version.py
backend/lexmind/barcode_qr/: README.md  __init__.py  acceptance.md  barcode_qr_detection.py  barcode_qr_detection_events.py  barcode_qr_detector.py  barcode_qr_plugin.py  barcode_qr_types.py
backend/lexmind/config/: README.md  __init__.py  config_events.py  config_exceptions.py  config_loader.py  config_manager.py  config_provider.py  config_registry.py  config_schema.py  config_source.py  config_types.py  config_validator.py  environment.py
backend/lexmind/core/: README.md  bootstrap.py  capabilities.py  health.py  interfaces.py  kernel.py  lifecycle.py  metadata.py  module.py  registry.py  service_locator.py  version.py
docs/: FAQ.md  (+9 more)
(+467 files in other folders)
